--- a/style.css
+++ b/style.css
@@ -7,19 +7,26 @@ body{
   }
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 .container {
     width: 500px;  height:1100px;  overflow:hidden;
-    transform: scale(0.5) translateY(-25vh);
-    margin: auto;
+    transform: scale(0.5)   ;
+    /* margin: auto; */
     z-index: 10;
+    position: absolute;
+    left: 24vh;
+    /* background: blue; */
 }
 .animaciones{
     height: 100vh;}
 .animacion{
     height: 100vh;
+    /* display: flex;
+    justify-content: center; */
     display: flex;
-    justify-content: center;
+    align-items: center;
 
     /* border: 1px solid red; */
 }
@@ -36,8 +43,22 @@ body{
     opacity: 0;
 }
 .cinco{
-    transform: translateY(-400vh);
-    opacity: 0;
+   display: none;
+}
+@media (max-width: 1300px){
+    .container{
+        left: 11vh;
+    }
+}
+@media (max-width:1100px){
+    .container{
+        left: 5vh;
+    }
+}
+@media (max-width: 1050px){
+    .container{
+        left: 0;
+    }
 }
 @media (max-width: 945px){
     .animacion{
@@ -45,20 +66,26 @@ body{
         flex-wrap: wrap;
     }
     .container-text{
-        transform: translateY(-50vh);
+        transform: translateY(35vh);
         /* width: 40%; */
         text-align: center;
         width: 70%;
+        align-items: flex-end;
+        margin: auto;
+        left:11vh;
+        /* right: 0 !important; */
     }
     .container{
-        padding-top: 100px;
-        transform: scale(0.3);
+        /* padding-top: 100px; */
+        /* transform: scale(0.3); */
+        left: 0;
+        right: 0;
+        margin: auto;
     }
 }
 @media (max-width: 458px){
     .container{
-        margin: 0;
-        transform: translateX(-15vh) scale(0.4) translateY(100px);
+        transform: scale(0.4) translateY(-100vh) translateX(-11vh);
     }
     .animacion{
         flex-direction: column;
@@ -67,16 +94,22 @@ body{
         padding: 0;
     }
     .container-text{
-        transform: translateX(-15vh) translateY(-50vh);
+        /* transform: translateX(-15vh) translateY(-50vh); */
     }
 }
 .container-text{
     color: white;
     max-width: 500px;
     /* transform: translateY(50vh); */
-    margin: auto;
-    opacity: 0;
-    background-color: transparent;
+    /* margin: auto; */
+    /* opacity: 0; */
+    position: absolute;
+    right: 11vh;
+    /* background-color: transparent; */
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    /* background: red;  */
     /* border: 1px solid red; */
 }
 .container-tex p{
@@ -84,6 +117,7 @@ body{
     margin: auto;
     font-size: 24px;
 line-height: 28px;
+padding: 0;
 }
 /* .character3, .character4, .character5, .character6, .character7{
     opacity: 0;
