--- a/style.css
+++ b/style.css
@@ -10,115 +10,41 @@ body{
     margin: 0;
     padding: 0;
 }
+.ph1{
+    height: 100vh;
+    /* border: 1px solid blue; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* padding-bottom: 200vh; */
+    margin-bottom: 150vh;
+}
+.ph2{
+    height: 100vh;
+    /* border: 1px solid blue; */
+    display: flex;
+    align-items: center;
+    
+    justify-content: center;
+}
+.ph-text{
+    font-size: 24px;
+    font-weight: 400;
+    color: white;
+    max-width: 400px;
+    text-align: center;
+}
+.character1, .character12{
+    /* border: 1px solid red; */
+}
 .container {
-    width: 500px;  height:1100px;  overflow:hidden;
+    width: 500px;   overflow-x:hidden;
+    /* border: 1px solid green; */
     transform: scale(0.5)   ;
     /* margin: auto; */
     z-index: 10;
-    position: absolute;
-    left: 24vh;
+    margin: 0;
+    /* position: absolute; */
+    /* left: 24vh; */
     /* background: blue; */
 }
-.animaciones{
-    height: 100vh;}
-.animacion{
-    height: 100vh;
-    /* display: flex;
-    justify-content: center; */
-    display: flex;
-    align-items: center;
-
-    /* border: 1px solid red; */
-}
-#dos{
-    transform: translateY(-100vh);
-    opacity: 0;
-}
-.tres{
-    transform: translateY(-200vh);
-    opacity: 0;
-}
-.cuatro{
-    transform: translateY(-300vh);
-    opacity: 0;
-}
-.cinco{
-   display: none;
-}
-@media (max-width: 1300px){
-    .container{
-        left: 11vh;
-    }
-}
-@media (max-width:1100px){
-    .container{
-        left: 5vh;
-    }
-}
-@media (max-width: 1050px){
-    .container{
-        left: 0;
-    }
-}
-@media (max-width: 945px){
-    .animacion{
-        /* flex-direction: column; */
-        flex-wrap: wrap;
-    }
-    .container-text{
-        transform: translateY(35vh);
-        /* width: 40%; */
-        text-align: center;
-        width: 70%;
-        align-items: flex-end;
-        margin: auto;
-        left:11vh;
-        /* right: 0 !important; */
-    }
-    .container{
-        /* padding-top: 100px; */
-        /* transform: scale(0.3); */
-        left: 0;
-        right: 0;
-        margin: auto;
-    }
-}
-@media (max-width: 458px){
-    .container{
-        transform: scale(0.4) translateY(-100vh) translateX(-11vh);
-    }
-    .animacion{
-        flex-direction: column;
-        width: 90%;
-        margin: 0;
-        padding: 0;
-    }
-    .container-text{
-        /* transform: translateX(-15vh) translateY(-50vh); */
-    }
-}
-.container-text{
-    color: white;
-    max-width: 500px;
-    /* transform: translateY(50vh); */
-    /* margin: auto; */
-    /* opacity: 0; */
-    position: absolute;
-    right: 11vh;
-    /* background-color: transparent; */
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    /* background: red;  */
-    /* border: 1px solid red; */
-}
-.container-tex p{
-    text-align: center;
-    margin: auto;
-    font-size: 24px;
-line-height: 28px;
-padding: 0;
-}
-/* .character3, .character4, .character5, .character6, .character7{
-    opacity: 0;
-} */
